<resources>
    <string name="app_name">Keystone</string>
    <string name="navigation_drawer_open">Open navigation bar</string>
    <string name="navigation_drawer_close">Close navigation bar</string>
    <string name="action_settings">Settings</string>
    <string name="action_scan_qr_code">Scan QR Code</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="drawer_menu_my_vault">My Keystone</string>
    <string name="drawer_menu_multisig">Multisig Wallet</string>
    <string name="drawer_menu_add_remove">Add / Hide Assets</string>
    <string name="drawer_menu_sync">Sync Mobile</string>
    <string name="drawer_menu_setting">Settings</string>
    <string name="drawer_menu_about">About Keystone</string>
    <string name="title_about">About Keystone</string>
    <string name="title_setting">Settings</string>
    <string name="title_sync">Export to Keystone Watch-Only</string>
    <string name="add_remove_coin">Add / Hide Assets</string>
    <string name="scan">Scan QR Code</string>
    <string name="scan_hint">Align QR Code within frame to scan</string>
    <string name="pattern_lock">Pattern Unlock</string>
    <string name="pattern_lock_hint">Please draw an unlock pattern</string>
    <string name="switch_to_password">Switch to password unlock</string>
    <string name="www_keystone_com" translatable="false">www.keyst.one</string>
    <string name="device_info">Serial Number: %s \n   Firmware Version：%s\n SE Firmware Version: %s\n System Version：%s </string>
    <string name="addr" translatable="false">addr.</string>
    <string name="asset_list_empty">Please go to Menu > Add / Hide Assets to add assets you need</string>
    <string name="mnemonic_hint1">"The recovery phrase is used to restore your wallet. Use a Keystone Tablet to record your 24 recovery phrase words and store them securely."</string>
    <string name="mnemonic_hint2">Do not share your recovery phrase with anyone or take a picture of it. If it is lost or stolen, all assets are irretrievable.</string>
    <string name="saved">Recovery Phrase Saved</string>
    <string name="tab_my_pubkey">My PubKey</string>
    <string name="tab_transaction_history">SIGNATURES</string>
    <string-array name="step_label">
        <item>Web Authentication</item>
        <item>Set Password</item>
        <item>Firmware Upgrade</item>
        <item>Create/Import Wallet</item>
        <item>Choose Companion App</item>
    </string-array>
    <string name="create_addr">Create %s Address</string>
    <string name="signing_hint">Signing…</string>
    <string name="scan_progress">Please continue scanning: %s</string>
    <string name="eos_hint">Here is your %s public key （safe to share）</string>
    <string name="eos_pubkey">Public Key：\n%s</string>
    <string name="receive_warning">This address is only for BTC, other digital assets sent to the above address will be lost.</string>
    <string name="receive_coin">Receive BTC</string>
    <string name="version_update_hint"><![CDATA[Please visit: <font color="#00cdc3">https://keyst.one/fw<font/> to check for firmware updates. If you are not using the latest firmware, download it from the official Keystone website and save it on a microSD card (FAT32 format). Transfer the file to your device as shown in the image below. (microSD card not included with purchase.)]]></string>
    <string name="version">Version </string>
    <string name="setting_language">Language</string>
    <string name="setting_multisig_mode">Select Wallet</string>
    <string name="setting_vibrator">Vibrate On / Off</string>
    <string name="setting_brightness">Screen Brightness</string>
    <string name="setting_screen_off_time">Screen Timeout Length</string>
    <string-array name="language_entries" translatable="false">
        <item>English</item>
        <item>Español</item>
        <item>中文繁体</item>
        
        
        
        
    </string-array>
    <string-array name="language_values" translatable="false">
        <item>en</item>
        <item>es_rES</item>
        <item>zh_rCN</item>
        
        
        
        
    </string-array>
    <string-array name="network_entries">
        <item>Main Net</item>
        <item>Test Net</item>
    </string-array>
    <string-array name="network_values" translatable="false">
        <item>mainnet</item>
        <item>testnet</item>
    </string-array>
    <string-array name="watch_wallet_list">
        <item>Keystone Mobile</item>
        <item>BlueWallet</item>
        <item>Electrum</item>
        <item>BTCPay Server</item>
        <item>Sparrow Wallet</item>
        <item>Wasabi Wallet</item>
        <item>Generic Wallet</item>
    </string-array>
    <string-array name="watch_wallet_list_values" translatable="false">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>100</item>
    </string-array>
    <string-array name="multisig_mode_list">
        <item>Casa Mode</item>
        <item>Caravan Mode</item>
        <item>Generic Mode</item>
    </string-array>
    <string-array name="multisig_mode_list_values" translatable="false">
        <item>casa</item>
        <item>caravan</item>
        <item>legacy</item>
    </string-array>
    <string-array name="multisig_mode_list_sub_titles" translatable="true">
        <item>Hardware Key, Mobile Key, Casa Recovery Key</item>
        <item>Caravan Multisig</item>
        <item>BlueWallet, Specter, Sparrow Wallet…</item>
    </string-array>
    <string name="multisig_legacy">Generic</string>
    <string name="multisig_casa">Casa</string>
    <string name="multisig_caravan">Caravan</string>
    <string name="casa_operation_health_check">Perform Health Check</string>
    <string name="casa_operation_export">Export XPUB</string>
    <string name="casa_sign_message">Sign Message</string>
    <string name="casa_sign_message_result">Export signature</string>
    <string name="casa_sign_message_result_export">Scan QR Code with your Casa App</string>
    <string name="casa_sign_message_message">Message: </string>
    <string name="casa_sign_message_address">Associated Address: </string>
    <string name="casa_sign_message_path">Using the key associated with address: </string>
    <string name="casa_operation">OPTIONS</string>
    <string name="casa_signatures">SIGNING HISTORY</string>
    <string name="scan_qrcode_with_casa">Scan the QR code using Casa</string>
    <string-array name="address_format">
        <item>Nested SegWit（P2SH-P2WPKH）</item>
        <item>Native SegWit（P2WPKH）</item>
        <item>Legacy（P2PKH）</item>
    </string-array>
    <string-array name="address_format_subtitle">
        <item><![CDATA[eg. <font color="#00cdc3">3<font/>7VucYSaXLCAsxYyAPfbSi9eh4iEcbShgf]]></item>
        <item><![CDATA[eg. <font color="#00cdc3">bc1<font/>qcr8te4kr609gcawutmrza0j4xv80jy8z306fyu]]></item>
        <item><![CDATA[eg. <font color="#00cdc3">1<font/>LqBGSKuX5yYUonjxT5qGfpUsXKYYWeabA]]></item>
    </string-array>
    <string-array name="address_format_subtitle_testnet">
        <item><![CDATA[eg. <font color="#00cdc3">2<font/>7VucYSaXLCAsxYyAPfbSi9eh4iEcbShgf]]></item>
        <item><![CDATA[eg. <font color="#00cdc3">tb1<font/>qcr8te4kr609gcawutmrza0j4xv80jy8z306fyu]]></item>
        <item><![CDATA[eg. <font color="#00cdc3">m<font/>kpZhYtJu2r87Js3pDiWJDmPte2NRZ8bJV]]></item>
    </string-array>
    <string-array name="address_format_value" translatable="false">
        <item>P2SH-P2WPKH</item>
        <item>P2WPKH</item>
        <item>P2PKH</item>
    </string-array>
    <string-array name="screen_off_entries">
        <item>15 secs</item>
        <item>30 secs</item>
        <item>1 min</item>
        <item>2 mins</item>
        <item>5 mins</item>
        <item>10 mins</item>
    </string-array>
    <string-array name="screen_off_values" translatable="false">
        <item>15000</item>
        <item>30000</item>
        <item>60000</item>
        <item>120000</item>
        <item>300000</item>
        <item>600000</item>
    </string-array>
    <string name="tab_my_address">Receiving</string>
    <string name="tab_my_change_address">Change</string>
    <string name="web_auth1"><![CDATA[1. Click on <font color="#00cdc3">"Scan QR Code"<font/> button below and scan the QR code displayed on the website]]></string>
    <string name="web_auth2">2. Your Keystone would then display a code. Please enter that into the official website to verify the authenticity of your device</string>
    <string name="web_auth3"><![CDATA[3. Click <font color="#00cdc3">"Verify"<font/> button on the website to see your result]]></string>
    <string name="web_auth4">If the authentication fails, please do not use this device as it may have been compromised!</string>
    <string name="web_auth5"><![CDATA[Web Auth Link: <br> <font color="#00cdc3">https://keyst.one/start/1<font/>]]></string>
    <string name="firmware_upgrade1">Upgrading your firmware to the latest version to benefit from new features is highly recommended.</string>
    <string name="firmware_upgrade2">A microSD card in FAT32 format with a maximum memory capacity of 512GB is required</string>
    <string name="firmware_upgrade3">A minimum of 70% battery charge is required</string>
    <string name="firmware_upgrade4"><![CDATA[To download the latest firmware, please visit: <br> <font color="#00cdc3">https://keyst.one/start/3<font/>]]></string>
    <string name="sign">Sign</string>
    <string name="export_later">Export Later</string>
    <string name="import_multisig_wallet">Import Multisig Wallet</string>
    <string name="create_multisig_wallet">Create Multisig Wallet</string>
    <string name="export_now">Export Now</string>
    <string name="wallet_name">Wallet Name</string>
    <string name="wallet_verify_code">Wallet Verification Code</string>
    <string name="connect_casa">Connect Keystone to Casa</string>
    <string name="casa_use">To use a Keystone device with Casa:</string>
    <string name="casa_member">You need to be a Casa member</string>
    <string name="casa_app_phone">Have Casa App set up your phone</string>
    <string name="casa_guide_one_tip"><![CDATA[Questions about how to get set up with Casa? Go to <font color="#00cdc3">keys.casa/keystone<font>]]></string>
    <string name="casa_continue">Continue</string>
    <string name="casa_app_ready">Get Casa App Ready</string>
    <string name="casa_scan_device">Next, get the Casa App ready to scan a QR code displayed on this device:</string>
    <string name="casa_open_app">Open Casa App</string>
    <string name="casa_sec_tab"><![CDATA[Navigate to your \'<b>Security</b>\' tab]]></string>
    <string name="casa_hardware"><![CDATA[Tap \'<b>Set Up [Hardware] Wallet</b>\']]></string>
    <string name="casa_sel_keystone"><![CDATA[Select \'<b>Keystone</b>\']]></string>
    <string name="casa_con_scan_qr_code"><![CDATA[Continue to <b>Scan QR Code</b>]]></string>
    <string name="casa_guide_two_tip"><![CDATA[Questions? Follow our guide at <font color="#00cdc3">https://keyst.one/casa<font>]]></string>
    <string name="casa_continue_ready">Continue, It\'s Ready</string>
    <string name="caravan_hint"><![CDATA[Keystone supports the creation of a multi-signature wallet with Caravan, with graphic tutorials<br>please visit www.https://keyst.one/caravan]]></string>
    <string name="create_successful">Create Successful</string>
    <string name="caravan_export_wallet_hint"><![CDATA[
        1.  You can export this wallet to the cosigners for import (Cosigners need to import the wallet, otherwise they will not be able to sign the transactions of the wallet)<br>
        2. <font color="#00cdc3"> Co-signers need to check whether the verification code of the wallet to be imported is the same as the verification code of the wallet above</font>,and ensure that they are consistent before importing.<br>
    ]]></string>
</resources>