<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.keystone.cold.ui.views.SpanedTextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="30dp"
            android:layout_marginHorizontal="20dp"
            android:text="@string/caravan_hint"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/export_xpub"
                style="@style/AcceptButton"
                android:layout_width="match_parent"
                android:layout_margin="16dp"
                android:text="@string/casa_operation_export" />

            <Button
                android:id="@+id/import_multisig_wallet"
                style="@style/AcceptButton"
                android:layout_width="match_parent"
                android:layout_margin="16dp"
                android:text="@string/import_multisig_wallet" />

            <Button
                android:id="@+id/create_multisig"
                style="@style/AcceptButton"
                android:layout_width="match_parent"
                android:layout_margin="16dp"
                android:text="@string/create_multisig_wallet" />

        </LinearLayout>
    </LinearLayout>
</layout>