<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2021 Keystone
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ in the file COPYING.  If not, see <http://www.gnu.org/licenses/>.
  -->

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data />

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <RelativeLayout
            android:layout_width="288dp"
            android:layout_height="wrap_content"
            android:background="@drawable/modal_bg"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:layout_marginHorizontal="10dp"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                android:text="@string/create_successful"/>

            <TextView
                android:id="@+id/wallet_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/title"
                android:layout_marginTop="6dp"
                android:paddingHorizontal="16dp"
                android:text="@string/wallet_name"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/wallet_name"
                android:paddingHorizontal="16dp"
                android:layout_marginTop="6dp"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:text="Multisig_wallet_2-3"/>

            <TextView
                android:id="@+id/wallet_verify_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:paddingHorizontal="16dp"
                android:layout_marginTop="6dp"
                android:textSize="14sp"
                android:text="@string/wallet_verify_code"/>

            <TextView
                android:id="@+id/verify_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/wallet_verify_code"
                android:paddingHorizontal="16dp"
                android:layout_marginTop="6dp"
                android:textColor="@color/colorAccent"
                android:textSize="14sp"
                android:text="ABCDEFG"/>

            <com.keystone.cold.ui.views.SpanedTextView
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/verify_code"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="12dp"
                android:lineSpacingExtra="6dp"
                android:maxLines="15"
                android:paddingHorizontal="16dp"
                android:scrollbars="none"
                android:textSize="14sp"
                android:text="@string/caravan_export_wallet_hint"
                android:visibility="visible" />

            <Button
                android:id="@+id/export_later"
                style="@style/RefuseButton"
                android:layout_marginHorizontal="20dp"
                android:layout_width="100dp"
                android:layout_below="@+id/content"
                android:width="0dp"
                android:textSize="14sp"
                android:text="@string/export_later"/>

            <Button
                android:id="@+id/export_now"
                style="@style/AcceptButton"
                android:layout_marginHorizontal="20dp"
                android:layout_width="100dp"
                android:layout_below="@+id/content"
                android:layout_alignParentEnd="true"
                android:width="0dp"
                android:textSize="14sp"
                android:text="@string/export_now"/>


        </RelativeLayout>

    </FrameLayout>
</layout>